# fastbot

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: pypi.yml
fastbot/: bot.py  exception.py  matcher.py  message.py  plugin.py
fastbot/event/: __init__.py  message.py  meta.py  notice.py  request.py
fastbot/matcher/: BaseMatcher.py  CommandMatcher.py  OriCommand.py  __init__.py
samples/CommandMatchers/: bot.py
samples/CommandMatchers/plugins/: example.py
src/fastbot/: bot.py  matcher.py  message.py  plugin.py
src/fastbot/event/: __init__.py  message.py  meta.py  notice.py  request.py
